Defined SLM model Architecture

--- a/SLM.ipynb
+++ b/SLM.ipynb
@@ -286,6 +286,211 @@
     "        x,y = x.to(DEVICE), y.to(DEVICE)\n",
     "    return x,y   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ad01fe",
+   "metadata": {},
+   "source": [
+    "# Step 4 : Define SLM Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b4aea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import math\n",
+    "from dataclasses import dataclass\n",
+    "import numpy as np\n",
+    "from tqdm.auto import tqdm\n",
+    "from contextlib import nullcontext\n",
+    "import os\n",
+    "\n",
+    "class LayerNorm(nn.Module):\n",
+    "    def __init__(self,ndim,bias):\n",
+    "        super().__init__()\n",
+    "        self.weight = nn.Parameter(torch.ones(ndim)) #STD = 1\n",
+    "        self.bias = nn.Parameter(torch.zeros(ndim)) if bias else None # Mean = 0\n",
+    "    def forward(self,x):\n",
+    "        return F.layer_norm(x,self.weight.shape,self.weight,self.bias,1e-5)\n",
+    "\n",
+    "class CausalSelfAttention(nn.Module):\n",
+    "    def __init__(self,config):\n",
+    "        super().__init__()\n",
+    "        assert config.n_embd % config.n_head == 0\n",
+    "        self.c_attn = nn.Linear(config.n_embd,3*config.n_embd,bias=config.bias) #Projection layer 768 -> 3*768 (for q,k,v)\n",
+    "        self.c_proj = nn.Linear(config.n_embd,config.n_embd,bias=config.bias) # Output projection layer\n",
+    "        self.attn_dropout = nn.Dropout(config.dropout)\n",
+    "        self.resid_dropout = nn.Dropout(config.dropout)\n",
+    "        self.n_head = config.n_head\n",
+    "        self.n_embd = config.n_embd\n",
+    "        self.flash = hasattr(F,'scaled_dot_product_attention')\n",
+    "        if not self.flash:\n",
+    "            self.register_buffer(\"bias\", torch.tril(torch.ones(config.block_size, config.block_size))\n",
+    "                                       .view(1, 1, config.block_size, config.block_size))\n",
+    "        \n",
+    "        def forward(self,x):\n",
+    "            B,T,C = x.size()\n",
+    "            q,k,v = self.c_attn(x).split(self.n_embd, dim=2)\n",
+    "            q = q.view(B,T,self.n_head,C//self.n_head).transpose(1,2)\n",
+    "            k = k.view(B,T,self.n_head,C//self.n_head).transpose(1,2)\n",
+    "            v = v.view(B,T,self.n_head,C//self.n_head).transpose(1,2)\n",
+    "\n",
+    "            if self.flash:\n",
+    "                y = F.scaled_dot_product_attention(q, k, v, attn_mask=None, dropout_p=self.attn_dropout.p if self.training else 0.0, is_causal=True)\n",
+    "            else :\n",
+    "                att = (q @ k.transpose(-2, -1)) * (1.0 / math.sqrt(k.size(-1)))\n",
+    "                att = att.masked_fill(self.bias[:, :, :T, :T] == 0, float('-inf'))\n",
+    "                att = F.softmax(att, dim=-1)\n",
+    "                att = self.attn_dropout(att)\n",
+    "                y = att @ v\n",
+    "\n",
+    "            y = y.transpose(1, 2).contiguous().view(B, T, C)\n",
+    "            y = self.resid_dropout(self.c_proj(y))\n",
+    "            return y\n",
+    "        \n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self,config):\n",
+    "        super().__init__()\n",
+    "        self.c_fc = nn.Linear(config.n_embd, 4 * config.n_embd, bias=config.bias)\n",
+    "        self.gelu = nn.GELU()\n",
+    "        self.c_proj = nn.Linear(4 * config.n_embd, config.n_embd, bias=config.bias)\n",
+    "        self.dropout = nn.Dropout(config.dropout)\n",
+    "    def forward(self,x):\n",
+    "        return self.dropout(self.c_proj(self.gelu(self.c_fc(x))))    \n",
+    "\n",
+    "\n",
+    "class Block(nn.Module):\n",
+    "    def __init__(self,config):\n",
+    "        super().__init__()\n",
+    "        self.ln1 = nn.Linear(config.n_embd,4*config.n_embd)\n",
+    "        self.attn = CausalSelfAttention(config)\n",
+    "        self.ln2 = LayerNorm(config.n_embd, bias=False)\n",
+    "        self.mlp =MLP(config)\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        x = x + self.attn(self.ln1(x))\n",
+    "        x = x + self.mlp(self.ln2(x))\n",
+    "        return x\n",
+    "\n",
+    "@dataclass\n",
+    "class GPTConfig:\n",
+    "    block_size: int\n",
+    "    vocab_size: int\n",
+    "    n_layer: int\n",
+    "    n_head: int\n",
+    "    n_embd: int\n",
+    "    dropout: float = 0.0\n",
+    "    bias: bool = True\n",
+    "\n",
+    "\n",
+    "class GPT(nn.Module):\n",
+    "    def __init__(self,config):\n",
+    "        super().__init__()\n",
+    "        self.config = config\n",
+    "        self.transformer = nn.ModuleDict(dict(\n",
+    "            tok_emb = nn.Embedding(config.vocab_size, config.n_embd),\n",
+    "            pos_emb = nn.Embedding(config.block_size, config.n_embd),\n",
+    "            drop = nn.Dropout(config.dropout),\n",
+    "            h = nn.ModuleList([Block(config) for _ in range(config.n_layer)]),\n",
+    "            ln_f = LayerNorm(config.n_embd, config.bias),\n",
+    "        ))\n",
+    "        self.lm_head = nn.Linear(config.n_embd, config.vocab_size, bias=False)\n",
+    "        self.transformer.tok_emb.weight = self.lm_head.weight # Weight tying\n",
+    "\n",
+    "        self.apply(self._init_weights)\n",
+    "        for pn,p in self.named_parameters():\n",
+    "            if pn.endswith('c_proj.weight'):\n",
+    "                torch.nn.init.normal_(p, mean=0.0, std=0.02/math.sqrt(2 * config.n_layer))\n",
+    "        \n",
+    "    def _init_weights(self,module):\n",
+    "        if isinstance(module, nn.Linear):\n",
+    "            nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+    "            if module.bias is not None:\n",
+    "                nn.init.zeros_(module.bias)\n",
+    "        elif isinstance(module, nn.Embedding):\n",
+    "            nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+    "    \n",
+    "    def forward(self, idx, targets=None):\n",
+    "        device = idx.device\n",
+    "        b, t = idx.size()\n",
+    "        assert t <= self.config.block_size\n",
+    "        pos = torch.arange(0, t, dtype=torch.long, device=device)\n",
+    "\n",
+    "        tok_emb = self.transformer.tok_emb(idx)\n",
+    "        pos_emb = self.transformer.pos_emb(pos)\n",
+    "        x = self.transformer.drop(tok_emb + pos_emb)\n",
+    "        for block in self.transformer.h:\n",
+    "            x = block(x)\n",
+    "        x = self.transformer.ln_f(x)\n",
+    "\n",
+    "        if targets is not None:\n",
+    "            logits = self.lm_head(x)\n",
+    "            loss = F.cross_entropy(logits.view(-1, logits.size(-1)), targets.view(-1), ignore_index=-1)\n",
+    "            return logits, loss\n",
+    "        else:\n",
+    "            logits = self.lm_head(x[:, [-1], :])\n",
+    "            return logits, None\n",
+    "\n",
+    "    @torch.no_grad()\n",
+    "    def generate(self, idx, max_new_tokens, temperature=1.0, top_k=None):\n",
+    "        \"\"\"\n",
+    "        Generate tokens given a conditioning sequence.\n",
+    "        idx: Tensor of shape (B, T)\n",
+    "        \"\"\"\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            idx_cond = idx if idx.size(1) <= self.config.block_size else idx[:, -self.config.block_size:]\n",
+    "            logits, _ = self(idx_cond)\n",
+    "            logits = logits[:, -1, :] / temperature\n",
+    "            if top_k is not None:\n",
+    "                v, _ = torch.topk(logits, min(top_k, logits.size(-1)))\n",
+    "                logits[logits < v[:, [-1]]] = -float('Inf')\n",
+    "            probs = F.softmax(logits, dim=-1)\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1)\n",
+    "            idx = torch.cat((idx, idx_next), dim=1)\n",
+    "        return idx\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9f610714",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'detach'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# DEFINE YOUR CONFIGURATION HERE\u001b[39;00m\n\u001b[32m      2\u001b[39m config = GPTConfig(\n\u001b[32m      3\u001b[39m     vocab_size=\u001b[32m50257\u001b[39m,     \u001b[38;5;66;03m# use the tokenizer's vocab size\u001b[39;00m\n\u001b[32m      4\u001b[39m     block_size=\u001b[32m128\u001b[39m,       \u001b[38;5;66;03m# or whatever context size you're training with\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m     bias=\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     10\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m model = \u001b[43mGPT\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 95\u001b[39m, in \u001b[36mGPT.__init__\u001b[39m\u001b[34m(self, config)\u001b[39m\n\u001b[32m     91\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m()\n\u001b[32m     92\u001b[39m \u001b[38;5;28mself\u001b[39m.config = config\n\u001b[32m     93\u001b[39m \u001b[38;5;28mself\u001b[39m.transformer = nn.ModuleDict(\u001b[38;5;28mdict\u001b[39m(\n\u001b[32m     94\u001b[39m     tok_emb = nn.Embedding(config.vocab_size, config.n_embd),\n\u001b[32m---> \u001b[39m\u001b[32m95\u001b[39m     pos_emb = \u001b[43mnn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mParameter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mblock_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mn_embd\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[32m     96\u001b[39m     drop = nn.Dropout(config.dropout),\n\u001b[32m     97\u001b[39m     h = nn.ModuleList([Block(config) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(config.n_layer)]),\n\u001b[32m     98\u001b[39m     ln_f = LayerNorm(config.n_embd, config.bias),\n\u001b[32m     99\u001b[39m ))\n\u001b[32m    100\u001b[39m \u001b[38;5;28mself\u001b[39m.lm_head = nn.Linear(config.n_embd, config.vocab_size, bias=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m    101\u001b[39m \u001b[38;5;28mself\u001b[39m.transformer.tok_emb.weight = \u001b[38;5;28mself\u001b[39m.lm_head.weight \u001b[38;5;66;03m# Weight tying\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\adhis\\OneDrive\\Desktop\\Retail-Saarthi-SLM\\.venv\\Lib\\site-packages\\torch\\nn\\parameter.py:49\u001b[39m, in \u001b[36mParameter.__new__\u001b[39m\u001b[34m(cls, data, requires_grad)\u001b[39m\n\u001b[32m     46\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m torch.Tensor._make_subclass(\u001b[38;5;28mcls\u001b[39m, data, requires_grad)\n\u001b[32m     48\u001b[39m \u001b[38;5;66;03m# Path for custom tensors: set a flag on the instance to indicate parameter-ness.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m49\u001b[39m t = \u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdetach\u001b[49m().requires_grad_(requires_grad)\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(t) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(data):\n\u001b[32m     51\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m     52\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCreating a Parameter from an instance of type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(data).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     53\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mrequires that detach() returns an instance of the same type, but return \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     56\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mits __torch_dispatch__() implementation.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     57\u001b[39m     )\n",
+      "\u001b[31mAttributeError\u001b[39m: 'int' object has no attribute 'detach'"
+     ]
+    }
+   ],
+   "source": [
+    "# DEFINE YOUR CONFIGURATION HERE\n",
+    "config = GPTConfig(\n",
+    "    vocab_size=50257,     # use the tokenizer's vocab size\n",
+    "    block_size=128,       # or whatever context size you're training with\n",
+    "    n_layer=6,\n",
+    "    n_head=6,\n",
+    "    n_embd=384,\n",
+    "    dropout=0.1,\n",
+    "    bias=True\n",
+    ")\n",
+    "\n",
+    "model = GPT(config)"
+   ]
   }
  ],
  "metadata": {
